// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders Autocomplete with Error without crashing 1`] = `
<div
  className="formGroup inline paddingTop"
>
  <span
    className="controlNote controlLabelRequired"
  >
    Required
  </span>
  <label
    className="controlLabel controlLabelError"
    htmlFor="autocompletes"
  >
    Autocomplete
  </label>
  <div
    className="autoCompleteContainer"
  >
    <div
      style={Object {}}
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-expanded={false}
        aria-haspopup={false}
        aria-owns="react-autowhatever-1"
        autoComplete="off"
        autoFocus={false}
        className="formControl formControlError"
        disabled={true}
        id="autocompletes"
        name="autocomplete"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Type something..."
        required={true}
        role="combobox"
        style={Object {}}
        type="text"
        value="test"
      />
      <div
        id="react-autowhatever-1"
        style={Object {}}
      />
    </div>
    
    <span
      className="error"
    >
      <strong
        className="info"
      >
        An Error
      </strong>
      with useful hints
    </span>
  </div>
</div>
`;

exports[`Renders Autocomplete without crashing 1`] = `
<div
  className="formGroup inline paddingTop"
>
  <span
    className="controlNote controlLabelRequired"
  >
    Required
  </span>
  <label
    className="controlLabel"
    htmlFor="autocompletes"
  >
    Autocomplete
  </label>
  <div
    className="autoCompleteContainer"
  >
    <div
      style={Object {}}
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-expanded={false}
        aria-haspopup={false}
        aria-owns="react-autowhatever-1"
        autoComplete="off"
        autoFocus={false}
        className="formControl "
        disabled={true}
        id="autocompletes"
        name="autocomplete"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Type something..."
        required={true}
        role="combobox"
        style={Object {}}
        type="text"
        value="test"
      />
      <div
        id="react-autowhatever-1"
        style={Object {}}
      />
    </div>
    
  </div>
</div>
`;
